--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://raw.githubusercontent.com/Cixayah/cronometro-js/main/gengaricon.png">
     <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Cadastrar Pets</title>
@@ -12,7 +13,9 @@
 
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto py-8">
-        <h1 class="text-4xl font-bold mb-6">Cadastrar Pets</h1>
+        <a href="/">
+            <h1 class="text-4xl font-bold mb-6">Voltar</h1>
+        </a>
         <form method="POST" action="/cadastrar/pets" class="max-w-lg mx-auto">
             <div class="mb-4">
                 <label for="nome" class="block mb-1">Nome:</label>
